src/component/conversation_view/snapshots/envision__component__conversation_view__snapshot_tests__snapshot_disabled.snap
---
source: src/component/conversation_view/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌Conversation──────────────────────────────────────────────┐
│● User                                                    │
│  Hello                                                   │
│                                                          │
│◆ Assistant                                               │
│  Hi there!                                               │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
