src/component/conversation_view/snapshots/envision__component__conversation_view__snapshot_tests__snapshot_multiple_roles.snap
---
source: src/component/conversation_view/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌Conversation──────────────────────────────────────────────┐
│⚙ System                                                  │
│  System initialized.                                     │
│                                                          │
│● User                                                    │
│  What tools do you have?                                 │
│                                                          │
│⚒ Tool                                                    │
│  search: found 5 results                                 │
│                                                          │
│◆ Assistant                                               │
│  I found some results for you.                           │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
