src/component/conversation_view/snapshots/envision__component__conversation_view__snapshot_tests__snapshot_with_code_block.snap
---
source: src/component/conversation_view/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌Conversation──────────────────────────────────────────────┐
│● User                                                    │
│  Show me some code.                                      │
│                                                          │
│◆ Assistant                                               │
│  Here is a code example:                                 │
│  │ rust                                                  │
│  │ fn main() {                                           │
│  │     println!("Hello!");                               │
│  │ }                                                     │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
