src/component/conversation_view/snapshots/envision__component__conversation_view__snapshot_tests__snapshot_with_messages.snap
---
source: src/component/conversation_view/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌Conversation──────────────────────────────────────────────┐
│⚙ System                                                  │
│  Welcome to the conversation.                            │
│                                                          │
│● User                                                    │
│  Hello, can you help me?                                 │
│                                                          │
│◆ Assistant                                               │
│  Of course! What do you need?                            │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
