src/component/conversation_view/snapshots/envision__component__conversation_view__snapshot_tests__snapshot_with_title.snap
---
source: src/component/conversation_view/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌Session 1─────────────────────────────────────────────────┐
│● User                                                    │
│  Hello!                                                  │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
