src/component/conversation_view/snapshots/envision__component__conversation_view__snapshot_tests__view_chrome_owned_no_outer_border.snap
---
source: src/component/conversation_view/snapshot_tests.rs
expression: terminal.backend().to_string()
---
● User                                  
  Hello?                                
                                        
◆ Assistant                             
  Hi!
